--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resturant Order page</title>
-
+    <link rel="shortcut icon" href="./images/food2.png" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/bced25df86.js"
       crossorigin="anonymous"
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <button><i class="fa-solid fa-arrow-right"></i>ORDER NOW</button>
+      <button><i class="fa-solid fa-arrow-right"></i><a href="./pages/menu.html">ORDER NOW</a></button>
     </div>
   </body>
 </html>
