--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="./styles/home-page.css" />
+    <link rel="stylesheet" href="./styles/home-page.css?v=1.1" />
   </head>
   <body>
     <div class="container">
